# musicman

./: .gitignore  MusicMan.spec  README.md  pyproject.toml
scripts/: build_macos.sh
src/musicman/: __main__.py  app.py
src/musicman/models/: device.py  library.py  track.py  transfer_queue.py
src/musicman/services/: device_detect.py  downloader.py  paths.py  scanner.py  settings.py  transcoder.py  transfer.py
src/musicman/ui/: device_panel.py  device_selector.py  library_panel.py  main_window.py  queue_panel.py  settings_dialog.py  transfer_progress.py
src/musicman/workers/: download_worker.py  scan_worker.py  transfer_worker.py
tests/: test_download_worker.py  test_downloader.py  test_prefix.py  test_queue_model.py  test_scanner.py  test_track.py  test_transcoder.py
