[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musicman"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6", "mutagen>=1.47"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.3"]

[project.scripts]
musicman = "musicman.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
